--- a/MasaiConference/app/build.gradle
+++ b/MasaiConference/app/build.gradle
@@ -1,7 +1,13 @@
-plugins {
-    id 'com.android.application'
-    id 'kotlin-android'
-}
+
+
+    apply plugin: 'com.android.application'
+    apply plugin: 'kotlin-android'
+    apply plugin: 'kotlin-android-extensions'
+    apply plugin: 'kotlin-kapt'
+
+
+
+
 
 android {
     compileSdkVersion 30
@@ -30,6 +36,10 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+    buildFeatures {
+        viewBinding = true
+    }
+
 }
 
 dependencies {
@@ -39,7 +49,32 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.3.0'
     implementation 'com.google.android.material:material:1.3.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+
+    //lottie
+    implementation 'com.airbnb.android:lottie:3.7.0'
+
+    // Firebase
+    implementation 'com.google.firebase:firebase-analytics:17.4.3'
+    implementation 'com.firebaseui:firebase-ui-auth:6.2.1'
+    implementation 'com.google.firebase:firebase-dynamic-links-ktx:19.1.0'
+
+
+    // Kotpref
+    implementation 'com.chibatching.kotpref:kotpref:2.10.0'
+// Slider
+    implementation 'com.github.AppIntro:AppIntro:6.0.0'
+
+    implementation 'com.google.android.material:material:1.2.0'
+
+    //navigation
+    implementation "androidx.navigation:navigation-fragment-ktx:2.3.3"
+    implementation "androidx.navigation:navigation-ui-ktx:2.3.3"
+
 }
+apply plugin: 'com.google.gms.google-services'
+
+
