--- a/MasaiConference/app/build.gradle
+++ b/MasaiConference/app/build.gradle
@@ -15,7 +15,7 @@ android {
 
     defaultConfig {
         applicationId "com.masai.masaiconference"
-        minSdkVersion 21
+        minSdkVersion 23
         targetSdkVersion 30
         versionCode 1
         versionName "1.0"
@@ -73,6 +73,51 @@ dependencies {
     //navigation
     implementation "androidx.navigation:navigation-fragment-ktx:2.3.3"
     implementation "androidx.navigation:navigation-ui-ktx:2.3.3"
+
+    //mewobottomnavigation
+    implementation 'com.etebarian:meow-bottom-navigation:1.0.4'
+
+    //tablout
+    compile 'com.tompee:funtablayout:1.1.0'
+    implementation 'com.github.iammert:AnimatedTabLayout:0.1'
+
+
+    //materialsearch
+    implementation 'com.github.mancj:MaterialSearchBar:0.8.2'
+
+    //drawer
+    implementation 'com.infideap.drawerbehavior:drawer-behavior:1.0.3'
+
+    // TimeAgo
+    implementation 'com.github.marlonlom:timeago:4.0.1'
+
+    // Fast Adapter
+    implementation "com.mikepenz:fastadapter:5.0.2"
+    implementation "com.mikepenz:fastadapter-extensions-binding:5.0.2"
+    implementation "com.mikepenz:fastadapter-extensions-diff:5.0.2"
+    implementation "com.mikepenz:fastadapter-extensions-utils:5.0.2"
+
+    // Room
+    implementation "androidx.room:room-runtime:2.2.5"
+    implementation "androidx.room:room-ktx:2.2.5"
+    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    kapt "androidx.room:room-compiler:2.2.5"
+
+    // Koin
+    implementation "org.koin:koin-android:2.0.1"
+    implementation "org.koin:koin-androidx-viewmodel:2.0.1"
+
+    // Architecture Components
+    implementation "androidx.lifecycle:lifecycle-extensions:2.2.0"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0"
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.2.0"
+    implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.2.0"
+
+    // Jitsi
+    implementation('org.jitsi.react:jitsi-meet-sdk:2.9.0') { transitive = true }
+
+    // Material theme
+    implementation "com.google.android.material:material:1.1.0"
 
 }
 apply plugin: 'com.google.gms.google-services'
