--- a/MasaiConference/app/src/main/AndroidManifest.xml
+++ b/MasaiConference/app/src/main/AndroidManifest.xml
@@ -2,8 +2,11 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     package="com.masai.masaiconference">
+
     <uses-permission android:name="android.permission.INTERNET" />
+
     <application
+        android:name=".MasaiConference"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -11,7 +14,9 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="LockedOrientationActivity">
-        <activity android:name=".activity.AuthenticationActivity"></activity>
+        <activity android:name=".CreatMeetingActivity"></activity>
+        <activity android:name=".activity.HistoryActivity" />
+        <activity android:name=".activity.AuthenticationActivity" />
         <activity android:name=".activity.IntroductionActivity" />
         <activity
             android:name=".activity.SplashActivity"
@@ -22,10 +27,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".activity.MainActivity">
-
-        </activity>
-
+        <activity android:name=".activity.MainActivity" />
     </application>
 
 </manifest>
