--- a/MasaiConference/app/src/main/AndroidManifest.xml
+++ b/MasaiConference/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="LockedOrientationActivity">
-        <activity android:name=".CreatMeetingActivity"></activity>
+        <activity android:name=".CreateMeetingActivity"></activity>
         <activity android:name=".activity.HistoryActivity" />
         <activity android:name=".activity.AuthenticationActivity" />
         <activity android:name=".activity.IntroductionActivity" />
