--- a/MasaiConference/app/build.gradle
+++ b/MasaiConference/app/build.gradle
@@ -1,10 +1,8 @@
-
-
-    apply plugin: 'com.android.application'
-    apply plugin: 'kotlin-android'
-    apply plugin: 'kotlin-android-extensions'
-    apply plugin: 'kotlin-kapt'
-
+apply plugin: 'com.android.application'
+apply plugin: 'kotlin-android'
+apply plugin: 'kotlin-android-extensions'
+apply plugin: 'kotlin-kapt'
+apply plugin: 'realm-android'
 
 
 
@@ -39,6 +37,9 @@ android {
     buildFeatures {
         viewBinding = true
     }
+    realm {
+        syncEnabled = true
+    }
 
 }
 
@@ -54,14 +55,22 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 
+    //scheduleTimezone
+    compile 'net.danlew:android.joda:2.9.0'
     //lottie
     implementation 'com.airbnb.android:lottie:3.7.0'
+
+    //parse
+    implementation "com.github.parse-community.Parse-SDK-Android:parse:1.26.0"
 
     // Firebase
     implementation 'com.google.firebase:firebase-analytics:17.4.3'
     implementation 'com.firebaseui:firebase-ui-auth:6.2.1'
     implementation 'com.google.firebase:firebase-dynamic-links-ktx:19.1.0'
 
+    //setting
+    implementation 'com.makeramen:roundedimageview:2.3.0'
+    implementation 'com.balysv:material-ripple:1.0.2'
 
     // Kotpref
     implementation 'com.chibatching.kotpref:kotpref:2.10.0'
@@ -81,7 +90,12 @@ dependencies {
     compile 'com.tompee:funtablayout:1.1.0'
     implementation 'com.github.iammert:AnimatedTabLayout:0.1'
 
+    implementation 'com.github.mukeshsolanki:photofilter:1.0.2'
 
+    implementation 'com.karumi:dexter:6.2.2'
+
+    // Circle ImageView
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
     //materialsearch
     implementation 'com.github.mancj:MaterialSearchBar:0.8.2'
 
@@ -118,6 +132,9 @@ dependencies {
 
     // Material theme
     implementation "com.google.android.material:material:1.1.0"
+
+    //textDrawable
+    implementation 'com.amulyakhare:com.amulyakhare.textdrawable:1.0.1'
 
 }
 apply plugin: 'com.google.gms.google-services'
