--- a/MasaiConference/build.gradle
+++ b/MasaiConference/build.gradle
@@ -14,7 +14,7 @@ buildscript {
         classpath "com.android.tools.build:gradle:4.1.1"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath 'com.google.gms:google-services:4.0.1'
-
+        classpath "io.realm:realm-gradle-plugin:10.3.1"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -25,12 +25,15 @@ allprojects {
         google()
         jcenter()
         maven { url "https://jitpack.io" }
+
         maven{
             url "https://dl.bintray.com/infideap2/Drawer-Behavior"
         }
         maven {
             url "https://github.com/jitsi/jitsi-maven-repository/raw/master/releases"
         }
+        maven { url 'http://dl.bintray.com/amulyakhare/maven' }
+
     }
 }
 
