--- a/MasaiConference/app/build.gradle
+++ b/MasaiConference/app/build.gradle
@@ -52,6 +52,8 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.5.0'
     implementation 'androidx.appcompat:appcompat:1.3.0'
+    //slider
+    implementation 'com.github.smarteist:autoimageslider:1.4.0'
     implementation 'androidx.core:core:1.1.0'
     implementation 'com.google.android.material:material:1.3.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
@@ -62,6 +64,8 @@ dependencies {
     implementation 'androidx.recyclerview:recyclerview:1.0.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 
+    //glide
+    implementation 'com.github.bumptech.glide:glide:4.9.0'
     //scheduleTimezone
     compile 'net.danlew:android.joda:2.9.0'
     //lottie
@@ -172,6 +176,13 @@ dependencies {
     implementation 'cn.zhaiyifan:rememberedittext:0.9.0'
 
 
+    //jezzyrecycleView
+    implementation 'com.twotoasters.jazzylistview:library-recyclerview:1.2.1'
+
+    //numberofprogressbar
+    implementation 'com.daimajia.numberprogressbar:library:1.4@aar'
+
+    implementation 'com.afollestad.material-dialogs:commons:0.9.6.0'
 
 
 
