--- a/MasaiConference/app/src/main/AndroidManifest.xml
+++ b/MasaiConference/app/src/main/AndroidManifest.xml
@@ -25,17 +25,17 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:largeHeap="true"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:largeHeap="true"
         android:theme="@style/AppTheme"
         tools:ignore="LockedOrientationActivity">
 
 
-
+        
         <activity android:name=".Chatting.activity.StatusUpdateActivity" />
         <activity android:name=".Chatting.activity.SettingActivity" />
-        <activity android:name=".Chatting.activity.ForgetPassActivity"/>
+        <activity android:name=".Chatting.activity.ForgetPassActivity" />
         <activity android:name=".Chatting.activity.RegisterActivity" />
         <activity android:name=".Chatting.activity.LoginActivity" />
         <activity android:name=".activity.JoinActivity" />
@@ -47,9 +47,9 @@
         <activity android:name=".scheduler.views.AlarmActivity" />
         <activity android:name=".Chatting.activity.FriendsActivity" />
         <activity android:name=".Chatting.activity.SearchActivity" />
-        <activity android:name=".Chatting.activity.ChatActivity"></activity>
+        <activity android:name=".Chatting.activity.ChatActivity" />
         <activity android:name=".Chatting.activity.ChattingActivity" />
-        <activity android:name=".Chatting.activity.ProfileUserActivity" >
+        <activity android:name=".Chatting.activity.ProfileUserActivity">
             <intent-filter>
                 <action android:name="com.infobox.hasnat.ume.ume_TARGET_NOTIFICATION" />
 
@@ -81,10 +81,10 @@
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </receiver>
+
         <activity
             android:name="com.theartofdev.edmodo.cropper.CropImageActivity"
             android:theme="@style/Base.Theme.AppCompat" />
-
     </application>
 
 </manifest>
