--- a/MasaiConference/app/build.gradle
+++ b/MasaiConference/app/build.gradle
@@ -119,6 +119,11 @@ dependencies {
     // Material theme
     implementation "com.google.android.material:material:1.1.0"
 
+    //Retrofit
+    implementation 'com.squareup.retrofit2:converter-gson:2.5.0'
+    // okhttp library used to observe the api call logs on LogCat
+    implementation 'com.squareup.okhttp3:logging-interceptor:3.8.0'
+
 }
 apply plugin: 'com.google.gms.google-services'
 
